apps/nginx-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  labels:
    app.kubernetes.io/name: nginx-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: nginx-demo
